--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "dev": "next dev",
     "build": "next build",
     "build-staging": "NODE_ENV=staging next build",
+    "format": "prettier '**/*.{tsx,ts,js,json,md,yml,yaml}' --write",
+    "lint": "eslint '**/*.{tsx,ts,js}' --fix",
     "start": "next start -p 8081",
-    "start:dev": "next start -p 3001",
-    "lint": "next lint"
+    "start:dev": "next start -p 3001"
   },
   "dependencies": {
     "@emotion/css": "^11.11.2",
@@ -105,11 +106,17 @@
     "@types/react-dom": "^18",
     "@types/slate-html-serializer": "^0.6.8",
     "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^8.46.0",
     "eslint-config-next": "14.1.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.7",
     "postcss": "^8",
+    "prettier": "3.3.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
