--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true,
-   
+    "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "src", "**/*.ts", "**/*.tsx", "*.cjs", "*.mjs"],
   "exclude": ["node_modules"]
 }
