--- a/package.json
+++ b/package.json
@@ -100,6 +100,8 @@
     "yup": "1.3.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.11.10",
     "@types/nprogress": "^0.2.3",
