--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": ["next-env.d.ts", "src", "**/*.ts", "**/*.tsx", "*.cjs", "*.mjs"],
   "exclude": ["node_modules"]
