--- a/.eslintrc
+++ b/.eslintrc
@@ -17,8 +17,18 @@
   },
   "rules": {
     "@typescript-eslint/no-inferrable-types": 0,
-    "@typescript-eslint/no-unused-vars": 2,
+    "@typescript-eslint/no-unused-vars": 1,
     "@typescript-eslint/no-var-requires": 0,
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/ban-types": [
+      "error",
+      {
+        "extendDefaults": true,
+        "types": {
+          "{}": false
+        }
+      }
+    ],
     "@next/next/no-img-element": "off",
     "@next/next/no-page-custom-font": "off",
     "jsx-a11y/alt-text": "off",
