refactor: add MUI package, barrelsby and refactor first slide of landing using MUI component

--- a/package.json
+++ b/package.json
@@ -11,13 +11,26 @@
     "lint": "eslint '**/*.{tsx,ts,js}' --fix",
     "start": "next start -p 8081",
     "start:dev": "next start -p 3001",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "barrels": "barrelsby --config .barrelsby.json -q"
   },
   "dependencies": {
+    "@emotion/cache": "^11.13.1",
     "@emotion/css": "^11.11.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.13.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^6.0.1",
+    "@mui/joy": "^5.0.0-beta.48",
+    "@mui/material": "^6.0.1",
+    "@mui/styles": "^6.0.1",
+    "@mui/system": "^6.0.1",
+    "@mui/x-data-grid": "^7.15.0",
+    "@mui/x-date-pickers": "^7.15.0",
+    "@mui/x-date-pickers-pro": "^7.15.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.5",
@@ -76,6 +89,7 @@
     "lodash.isequal": "4.5.0",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
+    "next-nprogress-bar": "^2.3.13",
     "notistack": "^3.0.1",
     "nprogress": "0.2.0",
     "pdfjs-dist": "^4.1.392",
@@ -112,6 +126,7 @@
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "autoprefixer": "^10.0.1",
+    "barrelsby": "^2.8.1",
     "eslint": "^8.46.0",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
