--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^6.0.1",
     "@mui/joy": "^5.0.0-beta.48",
+    "@mui/lab": "^6.0.0-beta.8",
     "@mui/material": "^6.0.1",
     "@mui/styles": "^6.0.1",
     "@mui/system": "^6.0.1",
@@ -83,6 +84,7 @@
     "docx-preview": "^0.3.0",
     "formik": "^2.4.5",
     "i18next": "23.8.1",
+    "iconsax-react": "^0.0.8",
     "idb-keyval": "^6.2.1",
     "lodash": "^4.17.21",
     "lodash.debounce": "4.0.8",
