--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "react-hot-toast": "2.4.1",
     "react-i18next": "14.0.1",
     "react-icons": "^5.0.1",
+    "react-typical": "^0.1.3",
     "simplebar-react": "3.2.4",
     "slate": "^0.101.5",
     "slate-history": "^0.100.0",
@@ -123,6 +124,7 @@
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-typical": "^0.1.2",
     "@types/slate-html-serializer": "^0.6.8",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
