--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@udecode/plate-serializer-docx": "^30.1.2",
     "@udecode/plate-tabbable": "^30.1.2",
     "@udecode/plate-trailing-block": "^30.1.2",
+    "@untitled-ui/icons-react": "^0.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
@@ -90,6 +91,7 @@
     "lodash.debounce": "4.0.8",
     "lodash.isequal": "4.5.0",
     "lucide-react": "^0.330.0",
+    "mui-daterange-picker": "^1.0.5",
     "next": "14.1.0",
     "next-nprogress-bar": "^2.3.13",
     "notistack": "^3.0.1",
