--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "i18next": "23.8.1",
     "iconsax-react": "^0.0.8",
     "idb-keyval": "^6.2.1",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "lodash.debounce": "4.0.8",
     "lodash.isequal": "4.5.0",
@@ -105,6 +106,7 @@
     "react-hot-toast": "2.4.1",
     "react-i18next": "14.0.1",
     "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
     "react-typical": "^0.1.3",
     "simplebar-react": "3.2.4",
     "slate": "^0.101.5",
@@ -123,6 +125,7 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20.11.10",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
