--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@udecode/plate-tabbable": "^30.1.2",
     "@udecode/plate-trailing-block": "^30.1.2",
     "@untitled-ui/icons-react": "^0.1.3",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
@@ -88,6 +89,7 @@
     "i18next": "23.8.1",
     "iconsax-react": "^0.0.8",
     "idb-keyval": "^6.2.1",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "lodash.debounce": "4.0.8",
@@ -108,6 +110,7 @@
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
     "react-typical": "^0.1.3",
+    "sharp": "^0.33.5",
     "simplebar-react": "3.2.4",
     "slate": "^0.101.5",
     "slate-history": "^0.100.0",
