--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@udecode/plate-tabbable": "^30.1.2",
     "@udecode/plate-trailing-block": "^30.1.2",
     "@untitled-ui/icons-react": "^0.1.3",
+    "apexcharts": "^3.54.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -102,6 +103,7 @@
     "nprogress": "0.2.0",
     "pdfjs-dist": "^4.1.392",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.50.1",
