chore: complete ui of list for fields and detail statistic of user and staff (still mock data)

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "dayjs": "^1.11.13",
     "docx": "^8.5.0",
     "docx-preview": "^0.3.0",
+    "faker": "^6.6.6",
     "formik": "^2.4.5",
     "i18next": "23.8.1",
     "iconsax-react": "^0.0.8",
