--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toolbar": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@types/mapbox-gl": "^3.4.0",
     "@types/pdfjs-dist": "^2.10.378",
     "@udecode/cn": "^29.0.1",
     "@udecode/plate": "^30.2.1",
@@ -98,6 +99,7 @@
     "lodash.debounce": "4.0.8",
     "lodash.isequal": "4.5.0",
     "lucide-react": "^0.330.0",
+    "mapbox-gl": "^3.7.0",
     "mui-daterange-picker": "^1.0.5",
     "next": "14.1.0",
     "next-nprogress-bar": "^2.3.13",
