--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toolbar": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@types/mapbox-gl": "^3.4.0",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/pdfjs-dist": "^2.10.378",
     "@udecode/cn": "^29.0.1",
     "@udecode/plate": "^30.2.1",
@@ -115,6 +115,7 @@
     "react-i18next": "14.0.1",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.1.7",
     "react-typical": "^0.1.3",
     "sharp": "^0.33.5",
     "simplebar-react": "3.2.4",
