--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.7",
+    "react-scroll": "^1.9.0",
     "react-typical": "^0.1.3",
     "sharp": "^0.33.5",
     "simplebar-react": "3.2.4",
@@ -141,6 +142,7 @@
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
     "@types/react-typical": "^0.1.2",
     "@types/slate-html-serializer": "^0.6.8",
     "@types/uuid": "^9.0.8",
