--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "next-nprogress-bar": "^2.3.13",
     "notistack": "^3.0.1",
     "nprogress": "0.2.0",
+    "payos-checkout": "^1.0.9",
     "pdfjs-dist": "^4.1.392",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
