--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toolbar": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-google-maps/api": "^2.20.4",
     "@types/mapbox-gl": "^3.4.1",
     "@types/pdfjs-dist": "^2.10.378",
     "@udecode/cn": "^29.0.1",
