--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@radix-ui/react-toolbar": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-google-maps/api": "^2.20.4",
+    "@tinymce/tinymce-react": "^6.0.0",
     "@types/mapbox-gl": "^3.4.1",
     "@types/pdfjs-dist": "^2.10.378",
     "@udecode/cn": "^29.0.1",
